# fsec

./: README.md  pyproject.toml
examples/: diamond_exxss.py  diamond_mp2ss.py
fsec/singularity_subtraction/: __init__.py  analysis.py  exxss.py  function_fitting.py  grids.py  mp2ss.py
fsec/singularity_subtraction/model_function/: __init__.py  exx_modfunc.py  mp2_direct_modfunc.py  mp2_exchange_modfunc.py
fsec/singularity_subtraction/model_function/tests/: test_coulomb_integrals.py
fsec/singularity_subtraction/structure_factor/: __init__.py  exx_sf.py  helpers_sf.py  mp2_sf.py
fsec/singularity_subtraction/structure_factor/tests/: test_exx_structure_factor.py  test_mp2_structure_factor.py
fsec/singularity_subtraction/tests/: test_exxss.py  test_function_fitting.py  test_mp2ss.py
singularity_subtraction/: __init__.py  analysis.py  exxss.py  grids.py
singularity_subtraction/model_function/: mp2_direct_modfunc.py
singularity_subtraction/model_function/tests/: test_coulomb_integrals.py
singularity_subtraction/structure_factor/: __init__.py  mp2_sf.py
singularity_subtraction/structure_factor/tests/: test_exx_structure_factor.py  test_mp2_structure_factor.py
singularity_subtraction/tests/: test_exxss.py  test_function_fitting.py
