[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "fsec"
version = "0.1.0"
description = "Finite-size error corrections for periodic electronic-structure calculations"
requires-python = ">=3.9"
license = { file = "LICENSE" }
dependencies = [
    "numpy",
    "scipy",
    "pyscf",
]

[tool.setuptools.packages.find]
include = ["fsec*"]
